--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -16,10 +16,6 @@
   </iocConfiguration>
   <microsoft.identityModel>
     <service>
-      <audienceUris>
-        <clear/>
-        <add value="http://localhost:8010/sts/"/>
-      </audienceUris>
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
         <trustedIssuers>
           <clear/>
@@ -128,51 +124,52 @@
     </bindings>
     <services>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService"/>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+        </endpoint>
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
@@ -229,10 +226,22 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </clientCertificate>
+            <issuedTokenAuthentication certificateValidationMode="PeerTrust" allowUntrustedRsaIssuers="True">
+              <knownCertificates>
+                <clear/>
+                <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+              </knownCertificates>
+              <allowedAudienceUris>
+                <add allowedAudienceUri="http://localhost/osintranetdev/adressekartotekservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/finansstyringservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc"/>
+              </allowedAudienceUris>
+            </issuedTokenAuthentication>
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
@@ -250,6 +259,9 @@
                 <clear/>
                 <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
               </knownCertificates>
+              <allowedAudienceUris>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc"/>
+              </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
@@ -265,6 +277,13 @@
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2097152"/>
           <callbackTimeouts transactionTimeout="00:05:00"/>
+          <clientCredentials>
+            <clientCertificate findValue="OSDevGrp.OSIntranet.Clients" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <serviceCertificate>
+              <defaultCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+              <authentication certificateValidationMode="PeerTrust"/>
+            </serviceCertificate>
+          </clientCredentials>
         </behavior>
       </endpointBehaviors>
     </behaviors>
