--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -18,10 +18,6 @@
 
   <microsoft.identityModel>
     <service>
-      <audienceUris>
-        <clear/>
-        <add value="http://localhost:8010/sts/"/>
-      </audienceUris>
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
         <trustedIssuers>
           <clear/>
@@ -133,52 +129,52 @@
     </bindings>
     <services>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
         <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
@@ -213,24 +209,24 @@
       </service>
     </services>
     <client>
-      <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+      <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
         <identity>
-          <dns value="OSDevGrp.OSIntranet.Services"/>
+          <dns value="OSDevGrp.OSIntranet.Tokens"/>
         </identity>
       </endpoint>
-      <endpoint name="FinansstyringServiceIntegrationstest" address="http://localhost/osintranetdev/finansstyringservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+      <endpoint name="FinansstyringServiceIntegrationstest" address="http://localhost/osintranetdev/finansstyringservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
         <identity>
-          <dns value="OSDevGrp.OSIntranet.Services"/>
+          <dns value="OSDevGrp.OSIntranet.Tokens"/>
         </identity>
       </endpoint>
-      <endpoint name="KalenderServiceIntegrationstest" address="http://localhost/osintranetdev/kalenderservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+      <endpoint name="KalenderServiceIntegrationstest" address="http://localhost/osintranetdev/kalenderservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
         <identity>
-          <dns value="OSDevGrp.OSIntranet.Services"/>
+          <dns value="OSDevGrp.OSIntranet.Tokens"/>
         </identity>
       </endpoint>
-      <endpoint name="CommonServiceIntegrationstest" address="http://localhost/osintranetdev/commonservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+      <endpoint name="CommonServiceIntegrationstest" address="http://localhost/osintranetdev/commonservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
         <identity>
-          <dns value="OSDevGrp.OSIntranet.Services"/>
+          <dns value="OSDevGrp.OSIntranet.Tokens"/>
         </identity>
       </endpoint>
       <endpoint name="FoodWasteSystemDataServiceIntegrationstest" address="http://localhost/osintranetdev/foodwastesystemdataservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
@@ -248,10 +244,22 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
           <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </clientCertificate>
+            <issuedTokenAuthentication certificateValidationMode="PeerTrust" allowUntrustedRsaIssuers="True">
+              <knownCertificates>
+                <clear/>
+                <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+              </knownCertificates>
+              <allowedAudienceUris>
+                <add allowedAudienceUri="http://localhost/osintranetdev/adressekartotekservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/finansstyringservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc"/>
+              </allowedAudienceUris>
+            </issuedTokenAuthentication>
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
@@ -269,6 +277,9 @@
                 <clear/>
                 <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
               </knownCertificates>
+              <allowedAudienceUris>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc"/>
+              </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
@@ -285,14 +296,13 @@
           <clientCredentials>
             <clientCertificate findValue="OSDevGrp.OSIntranet.Clients" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <serviceCertificate>
-              <!--defaultCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/-->
               <scopedCertificates>
                 <clear/>
-                <add targetUri="http://localhost/osintranetdev/basicsecuritytokenservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
-                <add targetUri="http://localhost/osintranetdev/adressekartotekservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
-                <add targetUri="http://localhost/osintranetdev/finansstyringservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
-                <add targetUri="http://localhost/osintranetdev/kalenderservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
-                <add targetUri="http://localhost/osintranetdev/commonservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/basicsecuritytokenservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/adressekartotekservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/finansstyringservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/kalenderservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/commonservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
                 <add targetUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
               </scopedCertificates>
               <authentication certificateValidationMode="PeerTrust"/>
@@ -302,6 +312,13 @@
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2097152"/>
           <callbackTimeouts transactionTimeout="00:05:00"/>
+          <clientCredentials>
+            <clientCertificate findValue="OSDevGrp.OSIntranet.Clients" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <serviceCertificate>
+              <defaultCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+              <authentication certificateValidationMode="PeerTrust"/>
+            </serviceCertificate>
+          </clientCredentials>
         </behavior>
       </endpointBehaviors>
     </behaviors>
