--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -290,7 +290,10 @@
     <Compile Include="Unittests\Repositories\KonfigurationRepositoryTests.cs" />
     <Compile Include="Unittests\Resources\ResourceExceptionTests.cs" />
     <Compile Include="Unittests\Resources\ResourceTests.cs" />
+    <Compile Include="Unittests\Security\AuthorizationPolicies\AuthorizationPolicyHandlerTests.cs" />
+    <Compile Include="Unittests\Security\AuthorizationPolicies\AuthorizationPolicyTests.cs" />
     <Compile Include="Unittests\Security\Configuration\ConfigurationProviderTests.cs" />
+    <Compile Include="Unittests\Security\Attributes\RequiredClaimTypeAttributeTests.cs" />
     <Compile Include="Unittests\Security\Services\BasicSecurityTokenServiceConfigurationTests.cs" />
     <Compile Include="Unittests\Security\Services\BasicSecurityTokenServiceTests.cs" />
     <Compile Include="Unittests\Services\AdressekartotekServiceTests.cs" />
