--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -178,7 +178,7 @@
           </identity>
         </endpoint>
       </service>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
         <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
@@ -258,30 +258,16 @@
                 <add allowedAudienceUri="http://localhost/osintranetdev/finansstyringservice.svc"/>
                 <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc"/>
                 <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc"/>
-              </allowedAudienceUris>
-            </issuedTokenAuthentication>
-          </serviceCredentials>
-          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
-          <ioc/>
-        </behavior>
-        <behavior name="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
-          <serviceMetadata httpGetEnabled="True"/>
-          <serviceDebug includeExceptionDetailInFaults="True"/>
-          <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
-            <clientCertificate>
-              <authentication certificateValidationMode="PeerTrust"/>
-            </clientCertificate>
-            <issuedTokenAuthentication certificateValidationMode="PeerTrust" allowUntrustedRsaIssuers="True">
-              <knownCertificates>
-                <clear/>
-                <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
-              </knownCertificates>
-              <allowedAudienceUris>
                 <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc"/>
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
+          <serviceAuthorization principalPermissionMode="Custom">
+            <authorizationPolicies>
+              <clear/>
+              <add policyType="OSDevGrp.OSIntranet.Security.AuthorizationPolicies.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+            </authorizationPolicies>
+          </serviceAuthorization>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
@@ -327,15 +313,18 @@
         <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
       </behaviorExtensions>
     </extensions>
+    <!--
     <diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="8192" maxSizeOfMessageToLog="1048576"/>
     </diagnostics>
+    -->
   </system.serviceModel>
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
 
+  <!--
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.Tests.svclog"/>
@@ -364,4 +353,5 @@
     </sources>
     <trace autoflush="true"/>
   </system.diagnostics>
+  -->
 </configuration>
