--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -292,6 +292,7 @@
     <Compile Include="Unittests\Resources\ResourceTests.cs" />
     <Compile Include="Unittests\Security\AuthorizationPolicies\AuthorizationPolicyHandlerTests.cs" />
     <Compile Include="Unittests\Security\AuthorizationPolicies\AuthorizationPolicyTests.cs" />
+    <Compile Include="Unittests\Security\Claims\FoodWasteClaimTypesTests.cs" />
     <Compile Include="Unittests\Security\Configuration\ConfigurationProviderTests.cs" />
     <Compile Include="Unittests\Security\Attributes\RequiredClaimTypeAttributeTests.cs" />
     <Compile Include="Unittests\Security\Services\BasicSecurityTokenServiceConfigurationTests.cs" />
