--- a/OSDevGrp.OSIntranet.Security/OSDevGrp.OSIntranet.Security.csproj
+++ b/OSDevGrp.OSIntranet.Security/OSDevGrp.OSIntranet.Security.csproj
@@ -56,7 +56,7 @@
   <ItemGroup>
     <Compile Include="Attributes\RequiredClaimTypeAttribute.cs" />
     <Compile Include="Authorization\AuthorizationPolicy.cs" />
-    <Compile Include="Authorization\AuthorizationPolicyHandler.cs" />
+    <Compile Include="Authorization\AuthorizationHandler.cs" />
     <Compile Include="Authorization\IAuthorizationHandler.cs" />
     <Compile Include="Claims\FoodWasteClaimTypes.cs" />
     <Compile Include="Configuration\CertificateConfigurationElement.cs" />
