--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -265,7 +265,7 @@
           <serviceAuthorization principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
-              <add policyType="OSDevGrp.OSIntranet.Security.AuthorizationPolicies.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
             </authorizationPolicies>
           </serviceAuthorization>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
