--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -292,6 +292,7 @@
     <Compile Include="Unittests\Resources\ResourceTests.cs" />
     <Compile Include="Unittests\Security\Authorization\AuthorizationHandlerTests.cs" />
     <Compile Include="Unittests\Security\Authorization\AuthorizationPolicyTests.cs" />
+    <Compile Include="Unittests\Security\Authorization\ServiceAuthorizationManagerTests.cs" />
     <Compile Include="Unittests\Security\Claims\FoodWasteClaimTypesTests.cs" />
     <Compile Include="Unittests\Security\Configuration\ConfigurationProviderTests.cs" />
     <Compile Include="Unittests\Security\Attributes\RequiredClaimTypeAttributeTests.cs" />
