--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -247,7 +247,7 @@
           <serviceAuthorization principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
-              <add policyType="OSDevGrp.OSIntranet.Security.AuthorizationPolicies.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
             </authorizationPolicies>
           </serviceAuthorization>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
@@ -278,13 +278,10 @@
         <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
       </behaviorExtensions>
     </extensions>
-    <!--
     <diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="8192" maxSizeOfMessageToLog="1048576"/>
     </diagnostics>
-    -->
   </system.serviceModel>
-  <!--
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
@@ -313,5 +310,4 @@
     </sources>
     <trace autoflush="true"/>
   </system.diagnostics>
-  -->
 </configuration>
