--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -244,7 +244,7 @@
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
-          <serviceAuthorization principalPermissionMode="Custom">
+          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.ServiceAuthorizationManager, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
               <add policyType="OSDevGrp.OSIntranet.Security.Authorization.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
