--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -244,10 +244,10 @@
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
-          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.ServiceAuthorizationManager, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
+          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.SecureTokenAuthorizer, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
-              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.ClaimsAuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
             </authorizationPolicies>
           </serviceAuthorization>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
@@ -278,10 +278,13 @@
         <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
       </behaviorExtensions>
     </extensions>
+    <!--
     <diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="8192" maxSizeOfMessageToLog="1048576"/>
     </diagnostics>
+    -->
   </system.serviceModel>
+  <!--
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
@@ -310,4 +313,5 @@
     </sources>
     <trace autoflush="true"/>
   </system.diagnostics>
+  -->
 </configuration>
