--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -262,10 +262,10 @@
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
-          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.ServiceAuthorizationManager, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
+          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.SecureTokenAuthorizer, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
-              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.AuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.ClaimsAuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
             </authorizationPolicies>
           </serviceAuthorization>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
